[project]
name = "pyharborcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.10"
dependencies = [
    "aiodocker>=0.24.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "asyncclick>=8.1.8",
    "asyncio>=3.4.3",
    "orjson>=3.10.18",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "toml>=0.10.2",
]

[project.scripts]
pyharborcli = "pyharborcli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mutmut>=3.3.0",
    "mypy>=1.16.1",
    "nox>=2025.5.1",
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "ruff>=0.12.2",
]
